@@ -1,3 +1,8 @@
+2014-02-02  Sandra Loosemore  <sandra@codesourcery.com>
+
+	* config/nios2/crti.S (_init): Initialize GOT pointer from
+	_gp_got instead of _GLOBAL_OFFSET_TABLE_.
+
 2014-02-02  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* configure.ac: Check __mips64 when setting host_address.
